fix gap banks

--- a/src/scss/components/_bank_partner.scss
+++ b/src/scss/components/_bank_partner.scss
@@ -38,6 +38,7 @@
 		@media screen and (max-width: 500px) {
 			margin-right: auto;
 			margin-left: auto;
+			gap: 10px;
 		}
 	}
 
